# troml_dev_status

./: .gitignore  .gitlab-ci.yml  .jiggle_version.config  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Justfile  Makefile  README.md  SECURITY.md  go.py  mkdocs.yml  private_dictionary.txt  pyproject.toml  redo.sh  tox.ini
.github/workflows/: build.yml  integration_test.yml  publish_to_pypi.yml  release.yml  tox.yml
docs/: PEP.md  TODO.md  concepts.md  contributing.md  development_setup.md  index.md  installation.md  library_api.md  pep2.md  prior_art.md  requirements.txt  rubric.md  status_mapping.md  t.json  usage.md  verify.sh
docs/readme_rater/: PEP_README_RATER.md  readme_rater_poc.py
scripts/: bash_help.sh  basic_checks.sh  make_prompt.sh  make_source.sh
scripts/bitrab/: bandit.sh  basic_checks.sh  basic_help.sh  build_docs.sh  build_package.sh  check_docs.sh  lint.sh  mypy.sh  precommit.sh  publish_pypi.sh  pytest.sh
spec/: bug_troml_dev_status.md
src/readme_rater/: .env.example  __init__.py  __main__.py  cli.py  config.py  example_config.toml  llm_client.py  models.py  rater.py  rubric.py  scoring.py  state.py  utils.py
src/troml_dev_status/: __about__.py  __init__.py  checks.py  checks_completeness.py  checks_readme.py  cli.py  config.py  engine.py
src/troml_dev_status/analysis/: filesystem.py  find_tests.py  iter_the_files.py  readme_eval.py  signs_of_bad.py  validate_changelog.py
src/troml_dev_status/utils/: tomlkit_utils.py
test/: test_checks_source_layout.py  test_engine.py  test_engine_3.py  test_engine_again.py
test/test_analysis/: test_bureaucracy.py  test_count_those_files.py  test_filesystem.py  test_find_tests.py  test_pypi.py  test_validate_changelog.py
troml_dev_status/: __about__.py  __init__.py  checks.py  checks_completeness.py  cli.py  engine.py  models.py  reporting.py
troml_dev_status/analysis/: bureaucracy.py  filesystem.py  find_tests.py  git.py  pypi.py  readme_eval.py  validate_changelog.py
troml_dev_status/utils/: supported_python.py
